update to signup page

--- a/SocialMedia-Starter/package.json
+++ b/SocialMedia-Starter/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "starter",
-  "version": "0.1.0",
-  "private": true,
+  "name": "socialmedia-starter",
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "dependencies": {
-    "@iconscout/react-unicons": "^1.1.6",
-    "@mantine/core": "^4.2.1",
-    "@mantine/hooks": "^4.2.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.27.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "6",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "@iconscout/react-unicons": "^2.2.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,12 +15,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "browserslist": {
     "production": [
       ">0.2%",
